--- a/teaching.html
+++ b/teaching.html
@@ -3,23 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Soheil Zarrinpour</title>
+    <title>Teaching</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
 <body class="m-5 text-center">
 <div>
-    <h1>Soheil is here!:</h1>
+    <h2>Video lessons:</h1>
+    <a class="btn btn-warning" href="http://youtube.com/@soheilzarrinpour" role="button">Go to Youtube channel</a>
 </div>
 <div>
-    <h2>Musics</h1>
-    <a class="btn btn-warning" href="https://soundcloud.com/soheilzarrinpour/lapis-bubbles" role="button">Play Lapis bubbles on sound cloud</a>
-    <a class="btn btn-warning" href="https://soundcloud.com/soheilzarrinpour/submarine-aiff" role="button">Play Submarine on sound cloud</a>
-    <a class="btn btn-warning" href="https://soundcloud.com/soheilzarrinpour/resurrection-soheil-zarrinpour" role="button">Play resurrection on sound cloud</a>
-</div>
-<div>
-    <h2>Teaching</h1>
-    <a class="btn btn-warning" href="teaching.html" role="button">Go to teaching center</a>
+    <h2>Text lessons:</h1>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
