--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   </head>
 <body class="m-5 text-center">
 <div>
-    <h1>Soheil is here!:</h1>
+    <h1>Soheil is here!</h1>
 </div>
 <div>
-    <h2>Musics</h1>
-    <a class="btn btn-warning" href="https://soundcloud.com/soheilzarrinpour/lapis-bubbles" role="button">Play Lapis bubbles on sound cloud</a>
-    <a class="btn btn-warning" href="https://soundcloud.com/soheilzarrinpour/submarine-aiff" role="button">Play Submarine on sound cloud</a>
-    <a class="btn btn-warning" href="https://soundcloud.com/soheilzarrinpour/resurrection-soheil-zarrinpour" role="button">Play resurrection on sound cloud</a>
+    <h2 class="mt-5">Musics</h2>
+    <a class="btn btn-warning m-1" href="https://soundcloud.com/soheilzarrinpour/lapis-bubbles" role="button">Play Lapis bubbles on sound cloud</a>
+    <a class="btn btn-warning m-1" href="https://soundcloud.com/soheilzarrinpour/submarine-aiff" role="button">Play Submarine on sound cloud</a>
+    <a class="btn btn-warning m-1" href="https://soundcloud.com/soheilzarrinpour/resurrection-soheil-zarrinpour" role="button">Play resurrection on sound cloud</a>
 </div>
 <div>
-    <h2>Teaching</h1>
+    <h2 class="mt-5">Teaching</h2>
     <a class="btn btn-warning" href="teaching.html" role="button">Go to teaching center</a>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
