--- a/teaching.html
+++ b/teaching.html
@@ -9,11 +9,11 @@
   </head>
 <body class="m-5 text-center">
 <div>
-    <h2>Video lessons:</h1>
-    <a class="btn btn-warning" href="http://youtube.com/@soheilzarrinpour" role="button">Go to Youtube channel</a>
+    <h2 class="mt-5">Video lessons</h2>
+    <a class="btn btn-warning m-1" href="http://youtube.com/@soheilzarrinpour" role="button">Go to Youtube channel</a>
 </div>
 <div>
-    <h2>Text lessons:</h1>
+    <h2 class="mt-5">Text lessons</h2>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
