add navigation bar

--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body class="m-5 text-center">
-<div>
-    <h1>Soheil is here!</h1>
-</div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#">Soheil Zarrinpour</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="musics.html">Musics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="teaching.html">Teaching</a>
+        </li>
+
+
+      </ul>
+    </div>
+  </div>
+</nav>
 <div>
     <h2 class="mt-5">Musics</h2>
     <a class="btn btn-warning m-1" href="https://soundcloud.com/soheilzarrinpour/lapis-bubbles" role="button">Play Lapis bubbles on sound cloud</a>
