--- a/teaching.html
+++ b/teaching.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body class="m-5 text-center">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#">Soheil Zarrinpour</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link "  href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="musics.html">Musics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Teaching</a>
+        </li>
+
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div>
     <h2 class="mt-5">Video lessons</h2>
     <a class="btn btn-warning m-1" href="http://youtube.com/@soheilzarrinpour" role="button">Go to Youtube channel</a>
