edit musics to music

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="musics.html">Musics</a>
+          <a class="nav-link" href="music.html">Music</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="teaching.html">Teaching</a>
