--- a/audio-tutorials.html
+++ b/audio-tutorials.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Courses</title>
+    <title>Audio tutorials</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -36,7 +36,7 @@
 </nav>
 <div>
     <h2 class="mt-5">Courses</h2>
-    <a class="btn btn-warning m-1" href="https://meet.google.com/vnj-hcpm-yaw" role="button">Connect to Soheil by Google meet</a>
+    <a class="btn btn-warning m-1" href="https://meet.google.com/gyj-buxi-yzx" role="button">Go to the class</a>
    
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
