--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body class="m-5 text-center">
-<dev>
-    <h1 class="mt-5">Soheil Zarrinpour</h1>
-<p>Composition, Piano performing, Audio programming</p>
-</dev>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,10 +17,10 @@
       <a class="navbar-brand" href="#">Soheil Zarrinpour</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link " href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="musics.html">Musics</a>
+          <a class="nav-link active" aria-current="page" href="#">Musics</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="teaching.html">Teaching</a>
@@ -36,8 +32,10 @@
   </div>
 </nav>
 <div>
-    <h2 class="mt-5">Welcome</h2>
-<p>to my personal website</p>
+    <h2 class="mt-5">Musics</h2>
+    <a class="btn btn-warning m-1" href="https://drive.google.com/drive/folders/17eKirb3ZmYIA6YLb31ffdv0jJWwOr-lV" role="button">Instrumental music composition</a>
+    <a class="btn btn-warning m-1" href="https://soundcloud.com/soheilzarrinpour" role="button">Electronic music composition</a>
+    <a class="btn btn-warning m-1" href="https://drive.google.com/drive/folders/17klk12ZZdI5mfVaQ1ncAiiDJWSc5sSQ3" role="button">CV</a>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
