--- a/index1.html
+++ b/index1.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Courses</title>
+    <title>Soheil Zarrinpour</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
 <body class="m-5 text-center">
+<dev>
+    <h1 class="mt-5">Soheil Zarrinpour</h1>
+<p>Composition, Piano performing, Audio programming</p>
+</dev>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,16 +21,13 @@
       <a class="navbar-brand" href="#">Soheil Zarrinpour</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link " href="index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Musics</a>
+          <a class="nav-link" href="musics.html">Musics</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="teaching.html">Teaching</a>
-        </li>
-<li class="nav-item">
-          <a class="nav-link active" aria-current="page"  href="#">Courses</a>
         </li>
 
 
@@ -35,9 +36,8 @@
   </div>
 </nav>
 <div>
-    <h2 class="mt-5">Courses</h2>
-    <a class="btn btn-warning m-1" href="https://meet.google.com/vnj-hcpm-yaw" role="button">Connect to Soheil by Google meet</a>
-   
+    <h2 class="mt-5">Welcome</h2>
+<p>to my personal website</p>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
